rubocop/examples/good/style_IndentationWidth.rb
# Use two spaces per indentation level (aka soft tabs). No hard tabs.

# good
def some_method
  do_something
end
