rubocop/examples/bad/style_IndentationWidth.rb
# Use two spaces per indentation level (aka soft tabs). No hard tabs.

# bad - four spaces
def some_method
    do_something
end
